--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.64.0",
     "recharts": "^3.2.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "web-push": "^3.6.7",
     "zod": "^4.1.12"
